Fix grid and nav items spacing

--- a/frontend/packages/volto-light-theme/src/theme/_header.scss
+++ b/frontend/packages/volto-light-theme/src/theme/_header.scss
@@ -370,7 +370,7 @@
       flex: 3.5 1 0;
       align-self: center;
       justify-content: center;
-      margin-bottom: 40px;
+      margin-bottom: 11px;
 
       @media only screen and (max-width: $largest-mobile-screen) {
         display: none;
@@ -408,6 +408,19 @@
               border-bottom: 4px solid $black;
             }
           }
+        }
+      }
+
+       .desktop-menu {
+        .item {
+          padding-top: 15px;
+          &:hover::before,
+          &.active::before {
+            bottom: -20px;
+          }
+        }
+        .submenu-wrapper {
+          margin-top: 11px;
         }
       }
     }
